src/main/webapp/style-app.css
/*@import url("reset.css");*/

html,body { 
	height:100%; 
}

body {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size: 13px;
    color:#333
}

p {
    padding: 10px;
}

#appGrid {
    width: 100%;
    min-width: 900px;
    max-width: 1500px;
    margin: 0 auto;
}

#pageHeader {
    float: left;
    height: 75px;
    width: 100%;
    background: #307DC9;
	margin-top: 0;
	margin-bottom: 10px;
    overflow: auto;
}

#contentLiquid {
	background: #FFFFFF;	
	float: left;
    width: 100%;
}

#pageContent {
    background: #FFFFFF;
    margin-left: 260px;
	margin-right: 30px;
}

#pageLeftMenu {
    float: left;
    background: #FFFFFF;
    width: 250px;
    margin-left: -100%;

	
	border:0;
	margin-top: 10px;
	text-align: left;
	padding-left: 10px;
	padding-right: 0;
	margin-right: 0;
	
	/* scroll bar */
	overflow-y: auto;
	height: 85%;
}

.caption {
	color: #FFFFFF;
    float: left;
	margin-left: 30px;
}

#logoutHolder {
    float: right;
    margin-right: 30px;
    margin-top: 30px;
}

#logoutLink {
    font-style: italic;
    text-decoration: underline;
    color:white;
}

.input-filter {
	height: 25px;
	border-radius: 0;
	padding: 4px;
}

/* TODO: adjust calendar css
td.md-calendar-date {
    height: 30px;
    width: 30px;
}

span.md-calendar-date-selection-indicator {
    height: 30px;
    width: 30px;
}
.md-datepicker-calendar-pane {
    zoom: 0.8;
    -moz-transform: scale(0.8);
}
*/

.datepickerHolder {
    margin: 0;
    overflow: hidden; /* will contain if #first is longer than #second */
}

.datepickerHolder .validation-messages {
    font-size: 11px;
    color: darkred;
}

#fromDateHolder {
    width: 300px;
    float:left; /* add this */
}

#toDateHolder {
    overflow: hidden; /* if you don't want #second to wrap below #first */
    width: 300px;
    float: left;
}

#stubDateHolder {
    /* a little of magic, for stable date pickers position*/
    width: 10px;
    overflow: hidden;
    float:right;
    padding-bottom: 40px;
    color:white;
}

#loginForm {
    padding-top: 40px;
    padding-left: 40%;
    float:left;
}

#loginErrorText {
    color: red;
}

#submitBtn {
    float: right;
    margin-top: 15px;
    width: 100%;
}

.loginField {
    clear:both;
    text-align:right;
    line-height:20px;
    padding-top: 10px;
}

label {
    float:left; padding-right:10px;
}

